EngineCore/include/EngineAPI.h

	/* ── opaque handle ─────────────────────────────────────────── */
	typedef void* EngineContextHandle;
	/* ── entity handle ─────────────────────────────────────────── */
	typedef struct EntityId { uint32_t id; } EntityId;
	/// Submit a custom rendering callback at the specified layer
	ENGINE_API void Render_SubmitCustom(
		EngineContextHandle ctx,
		void (*callback)(void* userData),  ///< Custom render function
		void* userData,                    ///< User data passed to callback
		int layer,                         ///< Render layer
		int order                          ///< Order within layer
	);
	ENGINE_API void AutoTile_AddRule(
		EngineContextHandle ctx,
		int ruleSetId,
		const int* neighbors,
		int resultTileId,
		int priority
	);
	ENGINE_API void AutoTile_SetEnabled(EngineContextHandle ctx, int ruleSetId, int enabled);
	ENGINE_API void AutoTile_ApplyToRegion(
		EngineContextHandle ctx,
		EntityId tilemapLayer,
		int minX, int minY,
		int maxX, int maxY
	);
	//=============================================================================
	// TILE DEFINITION API
	//=============================================================================

	ENGINE_API void TileDef_Register(
		EngineContextHandle ctx,
		int tileId,
		const char* atlasName,
		const char* frameName,
		int walkable,
		int collisionType
	);
	ENGINE_API void TileDef_SetDefault(
		EngineContextHandle ctx,
		const char* atlasName,
		const char* frameName
	);
	ENGINE_API int TileDef_GetCount(EngineContextHandle ctx);
	ENGINE_API void TileDef_Clear(EngineContextHandle ctx);
	ENGINE_API void TileDef_RegisterTile(
		EngineContextHandle ctx,
		int tileId,
		const char* atlasName,
		const char* frameName,
		int walkable,
		int collisionType
	);
	ENGINE_API int TileDef_GetTileInfo(
		EngineContextHandle ctx,
		int tileId,
		char* outAtlasName, int atlasNameSize,
		char* outFrameName, int frameNameSize,
		int* outWalkable,
		int* outCollisionType
	);
	ENGINE_API void TileDef_LoadFromPalette(
		EngineContextHandle ctx,
		int paletteId
	);
	ENGINE_API void Engine_RunInContext(void (*fn)(void*), void* user);