CSharp/ScriptHost/Interop/TilemapInterop.cs


        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void AutoTile_AddRule(
            IntPtr ctx, int ruleSetId, [In] int[] neighbors, int resultTileId, int priority);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void AutoTile_SetEnabled(IntPtr ctx, int ruleSetId, int enabled);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void AutoTile_ApplyToRegion(
            IntPtr ctx, EntityId tilemapLayer, int minX, int minY, int maxX, int maxY);

        #endregion

        #region Tile Definition API

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TileDef_Register(
            IntPtr ctx, int tileId,
            [MarshalAs(UnmanagedType.LPStr)] string atlasName,
            [MarshalAs(UnmanagedType.LPStr)] string frameName,
            int walkable, int collisionType);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TileDef_SetDefault(
            IntPtr ctx,
            [MarshalAs(UnmanagedType.LPStr)] string atlasName,
            [MarshalAs(UnmanagedType.LPStr)] string frameName);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TileDef_GetCount(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TileDef_Clear(IntPtr ctx);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TileDef_RegisterTile(
            IntPtr ctx, int tileId,
            [MarshalAs(UnmanagedType.LPStr)] string atlasName,
            [MarshalAs(UnmanagedType.LPStr)] string frameName,
            int walkable, int collisionType);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TileDef_GetTileInfo(
            IntPtr ctx, int tileId,
            [Out] byte[] outAtlasName, int atlasNameSize,
            [Out] byte[] outFrameName, int frameNameSize,
            out int outWalkable, out int outCollisionType);

        [DllImport(DLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void TileDef_LoadFromPalette(IntPtr ctx, int paletteId);

        #endregion
    }
}